[tool.poetry]
name = "cloud_ips"
version = "0.1.0"
description = ""
authors = ["Alexander Miasoiedov <msoedov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
